Issue 245 fix, sort arrow making header jump

--- a/static/style/grid-layout.styl
+++ b/static/style/grid-layout.styl
@@ -37,6 +37,9 @@ div.grd_Cont
     .no-results
         background-color    transparent
 
+    .sort-arrow
+        position            initial
+
 // content table container
 div.grd_tblCont
     height                  400px
